# wasm-parsing

./: README.md  main.py  pyproject.toml
parser/: __init__.py  parse.py
tests/: test_parse_header.py
wasm_parser/: parse.py
