[tool.poetry]
name = "wasm_parser"
version = "0.1.0"
description = "WASM parsing experiments"
authors = ["Scoder12 <34356756+Scoder12@users.noreply.github.com>"]
license = "AGPL"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
